[tool.poetry]
name = "cloud"
version = "0.1.0"
description = "cloud is a file storage system hosted nowhere"
authors = ["Finn Eyles <rockysnow7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
inquirer = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
